[package]
name = "sutatikku"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0.86"
nix = { version = "0.29.0", features = ["fs", "process", "uio", "signal", "user", "ioctl", "event", "socket"] }
libc = "0.2"
libseccomp = "0.4.0"
libseccomp-sys = "0.3.0"
thiserror = "2"
bytemuck = { version = "1.23.2", features = ["derive"] }
bitflags = "2.5.0"
tempfile = "3.6"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.6"
